Agregado de modifcación
Códigos para modificar usuarios (y listar).
En
* php/forms/modificar---
*views/forms/modificar-
*views/forms/modificar- -form
*js/forms/modificar --

Hacer los correspondientes para platillo, mesa y cocina.

--- a/views/menus/menu-install.html
+++ b/views/menus/menu-install.html
@@ -23,7 +23,7 @@
                                 <p class="card-text">Administre las credenciales con las que se usa el sistema</p>
                                 <p><a href="../forms/nuevo-usuario.html" class="btn btn-primary">Agregar</a></p>
                                 <p><a href="../lists/listar-usuarios.php" class="btn btn-primary">Ver</a></p>
-                                <p><a href="#" class="btn btn-primary">Modificar</a></p>
+                                <p><a href="../forms/modificar-usuario.php" class="btn btn-primary">Modificar</a></p>
                             </div>
                     </div>
                 </div>
