--- a/views/menus/menu-install.html
+++ b/views/menus/menu-install.html
@@ -84,7 +84,7 @@
                                     <div class="card-block">
                                         <h4 class="card-title">Platillos</h4>
                                         <p class="card-text">Administre los platillos en el sistema</p>
-                                        <p><a href="#" class="btn btn-primary">Agregar</a></p>
+                                        <p><a href="../forms/nuevo-platillo.php" class="btn btn-primary">Agregar</a></p>
                                         <p><a href="#" class="btn btn-primary">Ver</a></p>
                                         <p><a href="#" class="btn btn-primary">Modificar</a></p>
                                     </div>
