--- a/views/menus/plantilla.html
+++ b/views/menus/plantilla.html
@@ -39,9 +39,32 @@
       </nav>
       <!--Body-->
       <div class="container-fluid">
-        <h1 class="mt-4">Simple Sidebar</h1>
-        <p>The starting state of the menu will appear collapsed on smaller screens, and will appear non-collapsed on larger screens. When toggled using the button below, the menu will change.</p>
-        <p>Make sure to keep all page content within the <code>#page-content-wrapper</code>. The top navbar is optional, and just for demonstration. Just create an element with the <code>#menu-toggle</code> ID which will toggle the menu when clicked.</p>
+        <div class="row">
+          <div class="col-9">
+              <h1 class="mt-4">Simple Sidebar</h1>
+              <p>The starting state of the menu will appear collapsed on smaller screens, and will appear non-collapsed on larger screens. When toggled using the button below, the menu will change.</p>
+              <p>Make sure to keep all page content within the <code>#page-content-wrapper</code>. The top navbar is optional, and just for demonstration. Just create an element with the <code>#menu-toggle</code> ID which will toggle the menu when clicked.</p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum iste repudiandae delectus voluptas voluptatem laborum sapiente, debitis rem dicta facere doloribus fugiat, tenetur necessitatibus quasi exercitationem eos ipsum quo unde!
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus, aut quibusdam vel eos distinctio tenetur laudantium iusto cumque earum doloribus, iste velit voluptatum, consequuntur dolor officia eum quas perferendis blanditiis?
+              Lorem ipsum, dolor sit amet consectetur adipisicing elit. Porro odit quos facilis. Provident iste corporis et, hic quia maiores suscipit praesentium, illum repellat doloribus commodi in assumenda rem atque earum?
+              Lorem ipsum, dolor sit amet consectetur adipisicing elit. Suscipit, dolores harum alias consequatur delectus repellendus explicabo molestiae, a aspernatur illum, dolor autem corporis. Quaerat maxime possimus ab nam blanditiis inventore?
+          </div>
+          <div class="col-3">
+            <div class="containter text-center">
+              <img src="../../images/users.png" style="width: 50%;">
+              <h3 class="mt4">
+                Nombre del usuario  
+              </h3>
+              <h4 class="mt4">
+                Username
+              </h4>
+              <p class="well">Message</p>
+              <p class="border">Message</p>
+
+              <button type="button" class="align-self-end btn btn-danger" style="margin-top: auto;">Salir</button>
+            </div>
+          </div>
+        </div>
       </div>
       <!--Body-->
     </div>
