--- a/views/forms/nuevo-ingrediente.html
+++ b/views/forms/nuevo-ingrediente.html
@@ -21,14 +21,14 @@
                     <form id="formulario" novalidate>
                         <div class="form-group">
                             <label for="">Nombre:  </label> <font color="red">*</font>
-                            <input name="nom" type="text" placeholder="Escriba el nombre para iniciar sesión en el sistema" class="form-control" required>
+                            <input name="nom" type="text" placeholder="Escriba el nombre del ingrediente" class="form-control" required>
                             <div class="invalid-feedback">
                                 Ingresa datos
                             </div>
                         </div>
                         <div class="form-group">
                             <label for="">Cantidad: </label> <font color="red">*</font>
-                            <input name="cnt" type="text" placeholder="Escriba la contraseña que usará para iniciar sesión" class="form-control" required>
+                            <input name="cnt" type="number" placeholder="Escriba la cantidad inicial" class="form-control" required>
                             <div class="invalid-feedback">
                                 Ingresa datos
                             </div>
@@ -44,31 +44,22 @@
                             </select>
                         </div>
                         <div class="form-group">
+                            <label for="">Existencia crítica: </label> <font color="red">*</font>
+                            <input name="ecrt" type="number" placeholder="Escriba la cantidad crítica" class="form-control" required>
+                            <div class="invalid-feedback">
+                                Ingresa datos
+                            </div>
+                        </div>
+                        <div class="form-group">
                             <button type="submit" class="btn btn-danger">Continuar</button>
                         </div>
                     </form>
                 </div>
             </div>
         </section>
-        <script>
-                // Example starter JavaScript for disabling form submissions if there are invalid fields
-                (function() {
-                  'use strict';
-
-                  window.addEventListener('load', function() {
-                    var form = document.getElementById('formulario');
-                    form.addEventListener('submit', function(event) {
-                      if (form.checkValidity() === false) {
-                        event.preventDefault();
-                        event.stopPropagation();
-                      }
-                      form.classList.add('was-validated');
-                    }, false);
-                  }, false);
-                })();
-                </script>
     </body>
-    <script src="../../js/agregar-ingrediente.js"></script>
+    <script src="../../js/vendor/validate-form.js"></script>
+    <script src="../../js/forms/agregar-ingrediente.js"></script>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js" integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k" crossorigin="anonymous"></script>
