--- a/views/forms/nuevo-usuario.html
+++ b/views/forms/nuevo-usuario.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, inicial-scale=1">
-        
+
         <title>
             Agregar nuevo usuario
         </title>
@@ -18,47 +18,48 @@
             <p class="lead text-center">Por favor, llene los campos con la información requerida. Los campos marcados con <font color="red">*</font> son obligatorios.</p>
             <div class="row">
                 <div class="col-8">
-                    <form id="formulario" novalidate>
+                    <form id="formulario" novalidate onsubmit='return check();'>
                         <div class="form-group">
                             <label for="">Nombre de usuario:  </label> <font color="red">*</font>
-                            <input name="usu" type="text" placeholder="Escriba el nombre para iniciar sesión en el sistema" class="form-control" required> 
+                            <input name="usu" type="text" placeholder="Escriba el nombre para iniciar sesión en el sistema" class="form-control" required>
                             <div class="invalid-feedback">
                                 Ingresa datos
                             </div>
                         </div>
                         <div class="form-group">
                             <label for="">Contraseña: </label> <font color="red">*</font>
-                            <input type="password" name="pas" placeholder="Escriba la contraseña que usará para iniciar sesión" class="form-control" required> 
+                            <input id="password"type="password" name="pas" placeholder="Escriba la contraseña que usará para iniciar sesión" class="form-control" required onkeyup="check();">
                             <div class="invalid-feedback">
                                 Ingresa datos
                             </div>
-                        </div>       
+                        </div>
                         <div class="form-group">
                             <label for="">Confirmar contraseña: </label> <font color="red">*</font>
-                            <input type="password" placeholder="Repita la contraseña" class="form-control" required> 
+                            <input type="password" id="confirm_password" onkeyup="check();"placeholder="Repita la contraseña" class="form-control" required>
                             <div class="invalid-feedback">
                                 Ingresa datos
                               </div>
+                              <span id="message"></span>
                         </div>
                         <div class="form-group">
                             <label for="">Nombre del usuario: </label>
-                            <input name="nom"type="text" placeholder="Escriba el nombre del administrador" class="form-control"> 
-                        </div>                
+                            <input name="nom"type="text" placeholder="Escriba el nombre del administrador" class="form-control">
+                        </div>
                         <div class="form-group">
                                 <label for="">Apellido paterno del usuario: </label>
-                                <input name="pat" type="text" placeholder="Escriba el apellido paterno del administrador" class="form-control"> 
-                        </div>  
+                                <input name="pat" type="text" placeholder="Escriba el apellido paterno del administrador" class="form-control">
+                        </div>
                         <div class="form-group">
                             <label for="">Apellido materno del usuario</label>
-                            <input name ="mat" type="text" placeholder="Escriba el apellido materno del administrador" class="form-control"> 
-                        </div>                
+                            <input name ="mat" type="text" placeholder="Escriba el apellido materno del administrador" class="form-control">
+                        </div>
                         <div class="form-group">
                             <label for="">Teléfono de contacto</label>
-                            <input name="tel" type="number"  value=0 placeholder="Escriba el teléfono de contacto del administrador" class="form-control"> 
+                            <input name="tel" type="number"  value=0 placeholder="Escriba el teléfono de contacto del administrador" class="form-control">
                         </div>
                         <div class="form-group">
                             <label for="">Dirección:</label>
-                            <input name="dir" type="text" placeholder="Escriba la dirección del administrador / restaurante." class="form-control"> 
+                            <input name="dir" type="text" placeholder="Escriba la dirección del administrador / restaurante." class="form-control">
                         </div>
                         <div class="form-group">
                             <label for="">Tipo de usuario</label> <font color="red">*</font>
@@ -72,26 +73,10 @@
                         </div>
                     </form>
                 </div>
-            </div>    
+            </div>
         </section>
-        <script>
-                // Example starter JavaScript for disabling form submissions if there are invalid fields
-                (function() {
-                  'use strict';
-                
-                  window.addEventListener('load', function() {
-                    var form = document.getElementById('formulario');
-                    form.addEventListener('submit', function(event) {
-                      if (form.checkValidity() === false) {
-                        event.preventDefault();
-                        event.stopPropagation();
-                      }
-                      form.classList.add('was-validated');
-                    }, false);
-                  }, false);
-                })();
-                </script>    
     </body>
+    <script src="../../js/vendor/validate-form.js"></script>
     <script src="../../js/forms/agregar-usuario.js"></script>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js" integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut" crossorigin="anonymous"></script>
