--- a/views/menus/plantilla.html
+++ b/views/menus/plantilla.html
@@ -53,7 +53,7 @@
             <div class="containter text-center">
               <img src="../../images/users.png" style="width: 50%;">
               <h3 class="mt4">
-                Nombre del usuario  
+                Nombre del usuario
               </h3>
               <h4 class="mt4">
                 Username
@@ -71,6 +71,9 @@
   </div>
   <script src="../../js/vendor/jquery/jquery.min.js"></script>
   <script src="../../js/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+  <script src="../../js/vendor/jquery-3.3.1.slim.min.js"></script>
+  <script src="../../js/vendor/popper.min.js"></script>
+  <script src="../../js/vendor/bootstrap.min.js"></script>
   <script>
     $("#menu-toggle").click(function(e) {
       e.preventDefault();
