--- a/views/menus/login.html
+++ b/views/menus/login.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, inicial-scale=1">
-        
+
         <title>
             ¡Bienvenido a SubstanceSoft - Restaurant Control System!
         </title>
@@ -20,14 +20,14 @@
                     <form id="formulario" novalidate>
                             <div class="form-group">
                                 <label for="">Nombre de usuario: </label> <font color="red">*</font>
-                                <input type="text" name="username" placeholder="Escriba el nombre de usuario para iniciar sesion" class="form-control" required> 
+                                <input type="text" name="username" placeholder="Escriba el nombre de usuario para iniciar sesion" class="form-control" required>
                                 <div class="invalid-feedback">
                                     Ingresa datos
                                 </div>
                             </div>
                             <div class="form-group">
                                 <label for="">Contraseña:  </label> <font color="red">*</font>
-                                <input name="password" type="password" placeholder="Escriba su contraseña" class="form-control" required> 
+                                <input name="password" type="password" placeholder="Escriba su contraseña" class="form-control" required>
                                 <div class="invalid-feedback">
                                     Ingresa datos
                                 </div>
@@ -42,7 +42,7 @@
         <script>
                 (function() {
                   'use strict';
-                
+
                   window.addEventListener('load', function() {
                     var form = document.getElementById('formulario');
                     form.addEventListener('submit', function(event) {
@@ -54,11 +54,11 @@
                     }, false);
                   }, false);
                 })();
-                </script>    
+                </script>
                         <script>
                                 (function() {
                                   'use strict';
-                                
+
                                   window.addEventListener('load', function() {
                                     var form = document.getElementById('formulario');
                                     form.addEventListener('submit', function(event) {
@@ -70,10 +70,10 @@
                                     }, false);
                                   }, false);
                                 })();
-                                </script>  
+                                </script>
     </body>
     <script src="../../js/requests/login.js"></script>
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js" integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k" crossorigin="anonymous"></script>
+    <script src="../../js/vendor/jquery-3.3.1.slim.min.js"></script>
+    <script src="../../js/vendor/popper.min.js"></script>
+    <script src="../../js/vendor/bootstrap.min.js"></script>
 </html>
