--- a/views/menus/menu-install.html
+++ b/views/menus/menu-install.html
@@ -72,9 +72,9 @@
                                 <div class="card-block">
                                     <h4 class="card-title">Roles</h4>
                                     <p class="card-text">Administre los roles de usuario</p>
-                                    <p><a href="#" class="btn btn-primary">Agregar</a></p>
+                                    <p><a href="../forms/nuevo-permiso.php" class="btn btn-primary">Agregar</a></p>
                                     <p><a href="#" class="btn btn-primary">Ver</a></p>
-                                    <p><a href="#" class="btn btn-primary">Modificar</a></p>
+                                    <p><a href="../forms/nuevo-permiso.php" class="btn btn-primary">Modificar</a></p>
                                 </div>
                         </div>
                     </div>
