--- a/views/menus/login.html
+++ b/views/menus/login.html
@@ -39,40 +39,9 @@
                 </div>
             </div>
         </section>
-        <script>
-                (function() {
-                  'use strict';
-
-                  window.addEventListener('load', function() {
-                    var form = document.getElementById('formulario');
-                    form.addEventListener('submit', function(event) {
-                      if (form.checkValidity() === false) {
-                        event.preventDefault();
-                        event.stopPropagation();
-                      }
-                      form.classList.add('was-validated');
-                    }, false);
-                  }, false);
-                })();
-                </script>
-                        <script>
-                                (function() {
-                                  'use strict';
-
-                                  window.addEventListener('load', function() {
-                                    var form = document.getElementById('formulario');
-                                    form.addEventListener('submit', function(event) {
-                                      if (form.checkValidity() === false) {
-                                        event.preventDefault();
-                                        event.stopPropagation();
-                                      }
-                                      form.classList.add('was-validated');
-                                    }, false);
-                                  }, false);
-                                })();
-                                </script>
     </body>
     <script src="../../js/requests/login.js"></script>
+    <script src="../../js/vendor/validate-form.js"></script>
     <script src="../../js/vendor/jquery-3.3.1.slim.min.js"></script>
     <script src="../../js/vendor/popper.min.js"></script>
     <script src="../../js/vendor/bootstrap.min.js"></script>
