--- a/views/forms/nueva-mesa.html
+++ b/views/forms/nueva-mesa.html
@@ -35,7 +35,7 @@
         </section>
     </body>
     <script src="../../js/vendor/validate-form.js"></script>
-    <script src="../../formsjs/agregar-mesa.js"></script>
+    <script src="../../js/forms/agregar-mesa.js"></script>
     <script src="../../js/vendor/jquery-3.3.1.slim.min.js"></script>
     <script src="../../js/vendor/popper.min.js"></script>
     <script src="../../js/vendor/bootstrap.min.js"></script>
