--- a/views/menus/plantilla.html
+++ b/views/menus/plantilla.html
@@ -74,11 +74,6 @@
   <script src="../../js/vendor/jquery-3.3.1.slim.min.js"></script>
   <script src="../../js/vendor/popper.min.js"></script>
   <script src="../../js/vendor/bootstrap.min.js"></script>
-  <script>
-    $("#menu-toggle").click(function(e) {
-      e.preventDefault();
-      $("#wrapper").toggleClass("toggled");
-    });
-  </script>
+  <script src="../../js/vendor/common-functions.js"></script>
 </body>
 </html>
