--- a/views/forms/nueva-cocina.html
+++ b/views/forms/nueva-cocina.html
@@ -39,3 +39,4 @@
     <script src="../../js/vendor/jquery-3.3.1.slim.min.js"></script>
     <script src="../../js/vendor/popper.min.js"></script>
     <script src="../../js/vendor/bootstrap.min.js"></script>
+</html>
