--- a/views/menus/menu-install.html
+++ b/views/menus/menu-install.html
@@ -34,7 +34,7 @@
                                     <h4 class="card-title">Cocinas</h4>
                                     <p class="card-text">Administre las múlltiples zonas de cocina en el sistema</p>
                                     <p><a href="../forms/nueva-cocina.html" class="btn btn-primary">Agregar</a></p>
-                                    <p><a href="#" class="btn btn-primary">Ver</a></p>
+                                    <p><a href="../lists/listar-cocinas.php" class="btn btn-primary">Ver</a></p>
                                     <p><a href="#" class="btn btn-primary">Modificar</a></p>
                                 </div>
                         </div>
@@ -46,7 +46,7 @@
                                         <h4 class="card-title">Ingredientes</h4>
                                         <p class="card-text">Administre los distintos ingredientes usados en el sistema</p>
                                         <p><a href="../forms/nuevo-ingrediente.html" class="btn btn-primary">Agregar</a></p>
-                                        <p><a href="#" class="btn btn-primary">Ver</a></p>
+                                        <p><a href="../lists/listar-ingredientes.php" class="btn btn-primary">Ver</a></p>
                                         <p><a href="#" class="btn btn-primary">Modificar</a></p>
                                     </div>
                             </div>
@@ -85,7 +85,7 @@
                                         <h4 class="card-title">Platillos</h4>
                                         <p class="card-text">Administre los platillos en el sistema</p>
                                         <p><a href="../forms/nuevo-platillo.php" class="btn btn-primary">Agregar</a></p>
-                                        <p><a href="#" class="btn btn-primary">Ver</a></p>
+                                        <p><a href="../lists/listar-platillos.php" class="btn btn-primary">Ver</a></p>
                                         <p><a href="#" class="btn btn-primary">Modificar</a></p>
                                     </div>
                             </div>
@@ -96,8 +96,8 @@
                                         <div class="card-block">
                                             <h4 class="card-title">Proveedores</h4>
                                             <p class="card-text">Administre el listado de proveedores en el sistema</p>
-                                            <p><a href="#" class="btn btn-primary">Agregar</a></p>
-                                            <p><a href="#" class="btn btn-primary">Ver</a></p>
+                                            <p><a href="../forms/nuevo-proveedor.html" class="btn btn-primary">Agregar</a></p>
+                                            <p><a href="../lists/listar-proveedores.php" class="btn btn-primary">Ver</a></p>
                                             <p><a href="#" class="btn btn-primary">Modificar</a></p>
                                         </div>
                                 </div>
