--- a/views/forms/nuevo-ingrediente.html
+++ b/views/forms/nuevo-ingrediente.html
@@ -34,21 +34,21 @@
                             </div>
                         </div>
                         <div class="form-group">
+                            <label for="">Existencia crítica: </label> <font color="red">*</font>
+                            <input name="ecrt" type="number" placeholder="Escriba la cantidad crítica" class="form-control" required>
+                            <div class="invalid-feedback">
+                                Ingresa datos
+                            </div>
+                        </div>
+                        <div class="form-group">
                             <label for="">Especificaci&oacute;n: </label> <font color="red">*</font>
-                            <select class="form-control" name="esp">
+                            <select class="form-control" name="esp" default="Kg">
                                 <option>Kg</option>
                                 <option>mg</option>
                                 <option>Lt</option>
                                 <option>ml</option>
                                 <option>pza.</option>
                             </select>
-                        </div>
-                        <div class="form-group">
-                            <label for="">Existencia crítica: </label> <font color="red">*</font>
-                            <input name="ecrt" type="number" placeholder="Escriba la cantidad crítica" class="form-control" required>
-                            <div class="invalid-feedback">
-                                Ingresa datos
-                            </div>
                         </div>
                         <div class="form-group">
                             <button type="submit" class="btn btn-danger">Continuar</button>
