--- a/views/menus/menu-install.html
+++ b/views/menus/menu-install.html
@@ -115,6 +115,24 @@
                                     </div>
                             </div>
                 </div>
+                <p>&nbsp;</p>
+                <div class="card-deck">
+                    <div class="card text-center">
+                        <div class="card-body">
+                                <img class="card-img-top img-fluid" src="../../images/chef.png" alt="Usuarios">
+                                <div class="card-block">
+                                    <h4 class="card-title">Chefs</h4>
+                                    <p class="card-text">Administre las cocinas de los chefs</p>
+                                    <p><a href="../forms/nuevo-chef.php" class="btn btn-primary">Agregar</a></p>
+                                    <p><a href="#" class="btn btn-primary">Ver</a></p>
+                                    <p><a href="../forms/nuevo-chef.php" class="btn btn-primary">Modificar</a></p>
+                                </div>
+                        </div>
+                    </div>
+                    <div class="card text-center" style="visibility: hidden"> <div class="card-body"></div></div>
+                    <div class="card text-center" style="visibility: hidden"> <div class="card-body"></div></div>
+                    <div class="card text-center" style="visibility: hidden"> <div class="card-body"></div></div>
+                </div>
         </section>
     </body>
     <script src="../../js/vendor/jquery-3.3.1.slim.min.js"></script>
