--- a/views/menus/menu-install.html
+++ b/views/menus/menu-install.html
@@ -35,7 +35,7 @@
                                     <p class="card-text">Administre las múlltiples zonas de cocina en el sistema</p>
                                     <p><a href="../forms/nueva-cocina.html" class="btn btn-primary">Agregar</a></p>
                                     <p><a href="../lists/listar-cocinas.php" class="btn btn-primary">Ver</a></p>
-                                    <p><a href="#" class="btn btn-primary">Modificar</a></p>
+                                    <p><a href="../forms/modificar-cocina.php" class="btn btn-primary">Modificar</a></p>
                                 </div>
                         </div>
                     </div>
