Vistas como admin

--- a/views/menus/index.html
+++ b/views/menus/index.html
@@ -56,7 +56,6 @@
                                 Ingresa datos
                               </div>
                               <span id="message"> </span>
-
                         </div>
                         <div class="form-group">
                             <label for="">Nombre del administrador </label>
@@ -116,6 +115,7 @@
             })();
         </script>
     </body>
+    <script src="../../js/vendor/validate-form.js"></script>
     <script src="../../js/forms/clean-install.js"></script>
     <script src="../../js/vendor/jquery-3.3.1.slim.min.js"></script>
     <script src="../../js/vendor/popper.min.js"></script>
