Surtido fijo sin triggers
///////////REMINDERS///////////
Para modificar los triggers, se debe descomentar en: SubstanceSoft\php\forms\eliminar-surtido.php
Para hacer el trigger, en: SubstanceSoft\php\forms\agregar-surtido.php
/////////////////SINTAXIS//////////
CREATE EVENT `trigger0` ON SCHEDULE EVERY 3 DAY STARTS '2019-04-02 00:00:00.000000' ON COMPLETION PRESERVE ENABLE DO SELECT * FROM usuario

DELETE EVENT trigger0

--- a/views/forms/nuevo-proveedor.html
+++ b/views/forms/nuevo-proveedor.html
@@ -14,7 +14,7 @@
     </head>
     <body>
         <section class="container">
-            <h1 class="text-uppercase text-center">Agregar usuario</h2>
+            <h1 class="text-uppercase text-center">Agregar proveedor</h2>
             <p class="lead text-center">Por favor, llene los campos con la información requerida. Los campos marcados con <font color="red">*</font> son obligatorios.</p>
             <div class="row">
                 <div class="col-8">
