--- a/views/menus/menu-install.html
+++ b/views/menus/menu-install.html
@@ -108,7 +108,7 @@
                                             <div class="card-block">
                                                 <h4 class="card-title">Surtidos</h4>
                                                 <p class="card-text">Administre los proveedores automáticos del sistema</p>
-                                                <p><a href="#" class="btn btn-primary">Agregar</a></p>
+                                                <p><a href="../forms/nuevo-surtido.php" class="btn btn-primary">Agregar</a></p>
                                                 <p><a href="#" class="btn btn-primary">Ver</a></p>
                                                 <p><a href="#" class="btn btn-primary">Modificar</a></p>
                                             </div>
