--- a/views/menus/login.html
+++ b/views/menus/login.html
@@ -4,6 +4,7 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, inicial-scale=1">
+        <link rel="shortcut icon" type="image/x-icon" href="../../images/icono.png" />
 
         <title>
             ¡Bienvenido a SubstanceSoft - Restaurant Control System!
