--- a/views/menus/index.html
+++ b/views/menus/index.html
@@ -8,6 +8,7 @@
         <title>
             ¡Bienvenido a SubstanceSoft - Restaurant Control System!
         </title>
+        <link rel="shortcut icon" type="image/x-icon" href="../../images/icono.png" />
 
         <link href="../../css/bs/bootstrap.min.css" rel="stylesheet">
         <link href="../../css/clean-install.css" rel="stylesheet">
