--- a/css/clean-install.css
+++ b/css/clean-install.css
@@ -51,3 +51,57 @@ html, body{
     color: rgb(255, 168, 74);
     border: solid rgb(255, 168, 74)3px;
 }
+
+.s-bg
+{
+    background: rgb(255,255,255);
+    background: linear-gradient(99deg, rgba(255,255,255,1) 0%, rgba(235,235,235,1) 61%, rgba(221,221,221,1) 100%);
+}
+
+.s-nb a:hover{
+    opacity: 0.8;
+}
+
+.s-nb{
+    padding-left: 2%;
+    padding-right: 2%;
+    background: rgb(205,0,0);
+    background: linear-gradient(90deg, rgba(205,0,0,1) 0%, rgba(116,0,0,1) 50%, rgba(219,0,0,1) 100%);
+    overflow: hidden;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.s-nb a{
+    text-decoration: none;
+}
+
+.s-nb img
+{
+    margin-left: auto;
+    float: left;
+    width: 45px;
+    vertical-align: middle;
+}
+
+.s-nb h1{
+    font-style: italic;
+    margin-left: 10px;
+    display: inline;
+    vertical-align: middle;
+    font-size: 30px;
+    text-decoration: none;
+    color: rgb(255, 255, 255);
+}
+
+
+.s-nb a
+{
+    color: rgb(250, 250, 250);
+    font-size: 26px;
+}
+
+.s-nb a:hover{
+    color: rgb(252, 252, 252);
+}
