--- a/css/login.css
+++ b/css/login.css
@@ -32,7 +32,14 @@ html, body{
     -webkit-text-stroke: 0.9px rgb(49, 49, 49);
     color: #F9F3F4;
     text-shadow: 0px 0px 300px #000;
-    font-size: 250%;
+    font-size: 220%;
+}
+
+.content h2{
+    -webkit-text-stroke: 0.9px rgb(49, 49, 49);
+    color: #F9F3F4;
+    text-shadow: 0px 0px 300px #000;
+    font-size: 100%;
 }
 
 .content label{
@@ -43,11 +50,11 @@ html, body{
 }
 
 .content .btn {
-    border-radius: 9px;
+    border-radius: 10px;
     color: #AE7233;
     -webkit-text-stroke: 0.2px rgb(49, 49, 49);
-    font-size: 130%;
-    padding: 10px 20px;
+    font-size: 110%;
+    padding: 8px 16px;
     border: solid #AE7233 3px;
     text-transform: uppercase;
     text-decoration: none;
