--- a/css/login.css
+++ b/css/login.css
@@ -36,14 +36,17 @@ html, body{
 }
 
 .content h2{
-    -webkit-text-stroke: 0.9px rgb(49, 49, 49);
+    /*-webkit-text-stroke: 0.9px rgb(49, 49, 49);*/
     color: #F9F3F4;
     text-shadow: 0px 0px 300px #000;
+    background-color:  rgba(105, 54, 0, 0.733);
+    padding: 10px 10px;
+    border-radius: 15px;
     font-size: 100%;
 }
 
 .content label{
-    -webkit-text-stroke: 0.25px rgb(49, 49, 49);
+    -webkit-text-stroke: 0.5px rgb(0, 0, 0);
     color: #F9F3F4;
     text-shadow: 0px 0px 300px #000;
     font-size: 110%;
@@ -65,4 +68,8 @@ html, body{
 .content .btn:hover{
     color: rgb(255, 168, 74);
     border: solid rgb(255, 168, 74)3px;
+}
+
+.separated span{
+    margin-left: 10px;
 }
