--- a/views/menus/login.html
+++ b/views/menus/login.html
@@ -1,49 +1,71 @@
 <!DOCTYPE html>
 <html lang="es">
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, inicial-scale=1">
-        <link rel="shortcut icon" type="image/x-icon" href="../../images/icono.png" />
 
-        <title>
-            ¡Bienvenido a SubstanceSoft - Restaurant Control System!
-        </title>
+<head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, inicial-scale=1">
+    <link rel="shortcut icon" type="image/x-icon" href="../../images/icono.png" />
 
-        <link href="../../css/bs/bootstrap.min.css" rel="stylesheet">
-        <link href="../../css/login.css" rel="stylesheet">
-    </head>
-    <body>
-        <section class="intro">
-            <div class="inner">
-                <div class="content">
-                    <h1>Inicia sesión en el sistema</h1>
-                    <form id="formulario" novalidate>
-                            <div class="form-group">
-                                <label for="">Nombre de usuario: </label> <font color="red">*</font>
-                                <input type="text" name="username" placeholder="Escriba el nombre de usuario para iniciar sesion" class="form-control" required>
-                                <div class="invalid-feedback">
-                                    Ingresa datos
-                                </div>
-                            </div>
-                            <div class="form-group">
-                                <label for="">Contraseña:  </label> <font color="red">*</font>
-                                <input name="password" type="password" placeholder="Escriba su contraseña" class="form-control" required>
-                                <div class="invalid-feedback">
-                                    Ingresa datos
-                                </div>
-                            </div>
-                            <div class="form-group">
-                                    <button type="submit" class="btn btn-primary">Iniciar sesión</button>
-                            </div>
-                    </form>
-                </div>
+    <title>
+        ¡Bienvenido a SubstanceSoft - Restaurant Control System!
+    </title>
+
+    <link href="../../css/bs/bootstrap.min.css" rel="stylesheet">
+    <link href="../../css/login.css" rel="stylesheet">
+</head>
+
+<body>
+    <section class="intro">
+        <div class="inner">
+            <div class="content">
+                <h1>Inicia sesión en el sistema</h1>
+                <h2>Use sus credenciales</h2>
+                <form id="formulario" novalidate>
+                    <div class="form-group">
+                        <label for="">Nombre de usuario: </label>
+                        <font color="red">*</font>
+                        <input type="text" name="username"
+                            placeholder="Escriba el nombre de usuario para iniciar sesión" class="form-control"
+                            required>
+                        <div class="invalid-feedback">
+                            Ingresa datos
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <label for="">Contraseña: </label>
+                        <font color="red">*</font>
+                        <input name="password" type="password" placeholder="Escriba su contraseña" class="form-control"
+                            required>
+                        <div class="invalid-feedback">
+                            Ingresa datos
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <button type="submit" class="btn btn-primary">Iniciar sesión</button>
+                    </div>
+                </form>
+                <h2>O use su código único</h2>
+                <form id="formulario2" novalidate>
+                    <div class="input-group separated">
+                        <input type="number" name="code" placeholder="Escriba su código de acceso" class="form-group form-control" required>
+                        <span class="input-group-btn">
+                            <button type="submit" class="btn btn-primary">Entrar</button>
+                        </span>
+                        <div class="invalid-feedback">
+                                Ingresa datos
+                        </div>
+                    </div>
+                </form>
             </div>
-        </section>
-    </body>
-    <script src="../../js/requests/login.js"></script>
-    <script src="../../js/vendor/validate-form.js"></script>
-    <script src="../../js/vendor/jquery-3.3.1.slim.min.js"></script>
-    <script src="../../js/vendor/popper.min.js"></script>
-    <script src="../../js/vendor/bootstrap.min.js"></script>
+        </div>
+    </section>
+</body>
+<script src="../../js/requests/login.js"></script>
+<script src="../../js/vendor/validate-form.js"></script>
+<script src="../../js/vendor/jquery-3.1.1.min.js"></script>
+<script src="../../js/vendor/jquery-3.3.1.slim.min.js"></script>
+<script src="../../js/vendor/popper.min.js"></script>
+<script src="../../js/vendor/bootstrap.min.js"></script>
+
 </html>
