Gestión de códigos
Generación, falta habilitar y deshabilitar

--- a/views/menus/menu-install.html
+++ b/views/menus/menu-install.html
@@ -129,7 +129,18 @@
                                 </div>
                         </div>
                     </div>
-                    <div class="card text-center" style="visibility: hidden"> <div class="card-body"></div></div>
+                    <div class="card text-center">
+                            <div class="card-body">
+                                    <img class="card-img-top img-fluid" src="../../images/codes.png" alt="Usuarios">
+                                    <div class="card-block">
+                                        <h4 class="card-title">Codigos</h4>
+                                        <p class="card-text">Administre el inicio de sesion mediante codigos</p>
+                                        <p><a href="../forms/nuevo-chef.php" class="btn btn-primary">Agregar</a></p>
+                                        <p><a href="#" class="btn btn-primary">Ver</a></p>
+                                        <p><a href="../forms/nuevo-chef.php" class="btn btn-primary">Modificar</a></p>
+                                    </div>
+                            </div>
+                        </div>                    
                     <div class="card text-center" style="visibility: hidden"> <div class="card-body"></div></div>
                     <div class="card text-center" style="visibility: hidden"> <div class="card-body"></div></div>
                 </div>
