--- a/views/functions/forms/busqueda-platillo.html
+++ b/views/functions/forms/busqueda-platillo.html
@@ -14,11 +14,11 @@
     </head>
     <body class="s-bg">
             <div class = "s-nb"> 
-                    <a onclick = "goBack()" href="#inicio" style="float: left;">
+                    <a onclick = "goBack()"   style="float: left;">
                             <img src="../../../images/back.png" style = "width: 50px;"alt="Regresar">
                     </a>
                     <a href="../../../views/menus/index.php"><h1>SubstanceSoft</h1></a>
-                    <a onclick = "refreshPage()" href="#inicio" style="float: left;">
+                    <a onclick = "refreshPage()"   style="float: left;">
                             <img src="../../../images/reload.png" alt="Recargar">
                     </a>
                 </div>
