--- a/css/index.css
+++ b/css/index.css
@@ -165,3 +165,15 @@ a.hide:hover
   {
       margin-bottom: -6px;
   }
+
+  .a-card
+  {
+    color:inherit;
+    text-decoration: none;
+  }
+
+  .a-card:hover
+{
+    color:inherit;
+    text-decoration: none;
+}
