--- a/views/functions/forms/busqueda-platillo.html
+++ b/views/functions/forms/busqueda-platillo.html
@@ -10,7 +10,7 @@
         </title>
 
         <link href="../../../css/bs/bootstrap.min.css" rel="stylesheet">
-        <link href="../../../css/clean-install.css" rel="stylesheet">
+        <link href="../../../css/clean-install.css" rel="stylesheet"><script>if (typeof module === 'object') {window.module = module;module = undefined;}</script>
     </head>
     <body class="s-bg">
             <div class = "s-nb"> 
@@ -51,5 +51,6 @@
         <script src="../../../js/vendor/validate-form.js"></script>
         <script src="../../../js/vendor/popper.min.js"></script>
         <script src="../../../js/vendor/bootstrap.min.js"></script>
+<script>if (window.module) module = window.module;</script>
         <script src="../../../js/forms/functions/nueva-comanda.js"></script>
 </html>
