--- a/views/menus/login.html
+++ b/views/menus/login.html
@@ -13,6 +13,9 @@
 
     <link href="../../css/bs/bootstrap.min.css" rel="stylesheet">
     <link href="../../css/login.css" rel="stylesheet">
+    <script>
+        if (typeof module === 'object') { window.module = module; module = undefined; }
+    </script>
 </head>
 
 <body>
@@ -48,12 +51,13 @@
                 <h2>O use su código único</h2>
                 <form id="formulario2" novalidate>
                     <div class="input-group separated">
-                        <input type="number" name="code" placeholder="Escriba su código de acceso" class="form-group form-control" required>
+                        <input type="number" name="code" placeholder="Escriba su código de acceso"
+                            class="form-group form-control" required>
                         <span class="input-group-btn">
                             <button type="submit" class="btn btn-primary">Entrar</button>
                         </span>
                         <div class="invalid-feedback">
-                                Ingresa datos
+                            Ingresa datos
                         </div>
                     </div>
                 </form>
@@ -61,11 +65,15 @@
         </div>
     </section>
 </body>
+<script src="../../js/vendor/notification/push.js"></script>
 <script src="../../js/requests/login.js"></script>
 <script src="../../js/vendor/validate-form.js"></script>
 <script src="../../js/vendor/jquery-3.1.1.min.js"></script>
 <script src="../../js/vendor/jquery-3.3.1.slim.min.js"></script>
 <script src="../../js/vendor/popper.min.js"></script>
 <script src="../../js/vendor/bootstrap.min.js"></script>
+<script>
+    if (window.module) module = window.module;
+</script>
 
 </html>
